--- a/style.css
+++ b/style.css
@@ -1,34 +1,53 @@
-body {
-    background-color: black;
-    /* margin: 0px; */
+.row {
+    font-size: 0px;
 }
 
-/* .container{
-    margin: auto 0px;
-}*/
+body {
+    background-color: black;
+}
 
 div.row div {
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
+    width: 30px;
+    height: 30px;
     display: inline-block;
 }
 
 div.brick {
-    background-color: blue;
+    background-color: rgb(0, 140, 255);
+    display: inline-block;
     margin: 0px;
 }
 
 div.coin {
     background: url('img/coin.gif') no-repeat center;
+    background-size: cover;
 }
 
 div#pacman {
     background: url('img/pacman.gif') no-repeat center;
     background-size: cover;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     position: absolute;
 }
 
-div.empty {}
+div#ghost {
+    background: url('img/ghost.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+}
+
+div#score {
+    border: 3px solid white;
+    width: 30px;
+    height: 20px;
+    color: white;
+    padding: 7px;
+    text-align: center;
+    position: absolute;
+    top: 20px;
+    left: 800px;
+}
